--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "vite build && tsc --project tsconfig.server.json",
     "dev": "tsx watch scripts/dev.ts",
-    "start": "node server/index.js"
+    "start": "node dist/server/index.js"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "1.1.3",
@@ -38,6 +38,7 @@
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/express": "5.0.0",
     "@types/node": "22.13.5",
     "@types/react": "19.0.10",
@@ -48,7 +49,7 @@
     "postcss": "8.4.35",
     "tailwindcss": "3.4.17",
     "tsx": "4.19.3",
-    "typescript": "5.8.2",
+    "typescript": "^5.8.2",
     "vite": "6.3.1"
   }
 }
