--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -7,7 +7,8 @@
     "outDir": "dist/server",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "strict": true
   },
   "include": ["server/**/*"],
   "exclude": ["node_modules"]
