--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "build": "vite build && tsc --project tsconfig.server.json",
     "dev": "tsx watch scripts/dev.ts",
-    "start": "node dist/server/index.js"
+    "start": "node dist/server/index.js",
+    "init-db": "node --loader ts-node/esm ./server/db/init.ts"
+
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "1.1.3",
@@ -41,7 +43,7 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/express": "5.0.0",
-    "@types/node": "22.13.5",
+    "@types/node": "^22.18.1",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "4.3.4",
@@ -49,8 +51,9 @@
     "ignore": "7.0.3",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.17",
+    "ts-node": "^10.9.2",
     "tsx": "4.19.3",
-    "typescript": "^5.8.2",
+    "typescript": "^5.9.2",
     "vite": "6.3.1"
   }
 }
